# tristripper

./: CMakeLists.txt  README.md
test/: base_exception.h  fileio.h  gl_mesh.cpp  gl_mesh.h  gl_model.cpp  gl_model.h  gl_renderer.cpp  gl_renderer.h  high_res_timer.cpp  high_res_timer.h  int.h  main.cpp  static_assert.h  stdafx.h  stdint.h  test.vcproj  varrays_normalizer.cpp  varrays_normalizer.h
test/models/: starship.vxo
